--- a/startpoint/requirements.txt
+++ b/startpoint/requirements.txt
@@ -1,6 +1,22 @@
-pytest
-pytest-docker-pexpect
-pytest-ordering
-pytest-logger
-defusedxml
-PySide2
+asyncio>=3.4.3
+attrs>=19.3.0
+defusedxml>=0.6.0
+future>=0.18.2
+importlib-metadata>=1.7.0
+iniconfig>=1.0.1
+more-itertools>=8.4.0
+packaging>=20.4
+pexpect>=4.8.0
+pluggy>=0.13.1
+ptyprocess>=0.6.0
+py>=1.9.0
+pyparsing>=2.4.7
+PySide2>=5.15.0
+pytest>=6.0.1
+pytest-docker-pexpect>=0.9
+pytest-logger>=0.5.1
+pytest-ordering>=0.6
+shiboken2>=5.15.0
+six>=1.15.0
+toml>=0.10.1
+zipp>=3.1.0
